--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "3.35.2",
+    "apisauce": "^3.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "formik": "^2.4.5",
     "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
@@ -27,14 +29,17 @@
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
+    "react-paystack": "^4.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
